@@ -5,6 +5,7 @@
 	* src/global.c (thanks_for_all_the_fish): Upon exit also free the
 	lists with functions and shortcuts.
 	* src/*.c: Several random whitespace and comment tweaks.
+	* src/global.c (replace_scs_for): Condense the function a bit.
 
 2014-05-12  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_spell): Provide startup feedback, as for the linter.
